# Homework-MVC

./: CMakeLists.txt
cmake/: Format.cmake
include/: CLIUserInterface.hpp  Controller.hpp  ControllerImpl.hpp  Module.hpp  SummarizeSequence.hpp  View.hpp
include/impl/: CLIUserInterfaceImpl.hpp  ControllerImpl.hpp  SummarizeSequenceImpl.hpp
include/interfaces/: Module.hpp  View.hpp
source/: CLIUserInterface.cpp  CLIUserInterfaceImpl.cpp  CMakeLists.txt  Controller.cpp  ControllerImpl.cpp  Module.cpp  SummarizeSequence.cpp  SummarizeSequenceImpl.cpp  View.cpp  main.cpp
test/: CLIUserInterfaceMock.hpp  CLIUserInterfaceTest.cpp  CMakeLists.txt  ControllerTest.cpp  SummarizeSequenceMock.hpp  SummarizeSequenceTest.cpp  ViewTest.cpp
